test/variables/ref/errors-type-mismatch-fn-2.good
errors-type-mismatch-fn-2.chpl:5: In method 'this':
errors-type-mismatch-fn-2.chpl:6: error: Initializing a reference with another type
errors-type-mismatch-fn-2.chpl:5: note: Reference has type real(64)
errors-type-mismatch-fn-2.chpl:6: note: Initializing with type int(64)
